--- a/docs/T6_6_Epreuve_pratique/BNS_2023.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2023.md
@@ -32,7 +32,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/01_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 01.2
@@ -65,7 +65,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/02_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 02.2
@@ -98,7 +98,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/03_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 03.2
@@ -131,7 +131,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/04_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 04.2
@@ -164,7 +164,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/05_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 05.2
@@ -197,7 +197,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/06_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 06.2
@@ -230,7 +230,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/07_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 07.2
@@ -263,7 +263,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/08_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 08.2
@@ -296,7 +296,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/09_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 09.2
@@ -329,7 +329,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/10_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 10.2
@@ -362,7 +362,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/11_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 11.2
@@ -395,7 +395,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/12_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 12.2
@@ -428,7 +428,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/13_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 13.2
@@ -461,7 +461,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/14_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 14.2
@@ -494,7 +494,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/15_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 15.2
@@ -527,7 +527,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/16_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 16.2
@@ -560,7 +560,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/17_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 17.2
@@ -593,7 +593,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/18_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 18.2
@@ -626,7 +626,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/19_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 19.2
@@ -659,7 +659,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/20_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 20.2
@@ -692,7 +692,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/21_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 21.2
@@ -725,7 +725,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/22_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 22.2
@@ -758,7 +758,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/23_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 23.2
@@ -791,7 +791,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/24_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 24.2
@@ -824,7 +824,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/25_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 25.2
@@ -857,7 +857,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/26_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 26.2
@@ -890,7 +890,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/27_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 27.2
@@ -923,7 +923,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/28_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 28.2
@@ -956,7 +956,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/29_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 29.2
@@ -989,7 +989,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/30_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 30.2
@@ -1022,7 +1022,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/31_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 31.2
@@ -1055,7 +1055,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/32_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 32.2
@@ -1088,7 +1088,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/33_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 33.2
@@ -1121,7 +1121,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/34_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 34.2
@@ -1154,7 +1154,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/35_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 35.2
@@ -1187,7 +1187,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/36_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 36.2
@@ -1220,7 +1220,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/37_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 37.2
@@ -1253,7 +1253,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/38_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 38.2
@@ -1286,7 +1286,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/39_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 39.2
@@ -1319,7 +1319,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/40_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 40.2
@@ -1352,7 +1352,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/41_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 41.2
@@ -1385,7 +1385,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/42_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 42.2
@@ -1418,7 +1418,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/43_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 43.2
@@ -1451,7 +1451,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/44_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 44.2
@@ -1484,7 +1484,7 @@ Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`
     === "Source Markdown"
             --8<-- "includes/2023/files/45_1/enonce.md"
     
-    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=https://raw.githubusercontent.com/glassus/terminale_nsi/main/docs/T6_6_Epreuve_pratique/data2023/scripts/vide.py){. target="_blank"}
+    :arrow_right: [Rédigez votre code sur Basthon](https://console.basthon.fr/?from=){. target="_blank"}
 
 
 ### Exercice 45.2
