--- a/docs/T6_6_Epreuve_pratique/BNS_2024.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2024.md
@@ -1,20 +1,13 @@
 # Épreuve Pratique BNS 2024
  
-:warning: WORK IN PROGRESS :warning:  
-   
-{#
-Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/01/2024**.    
+Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **12/03/2024**.    
 Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`  
-*(merci à Rémi Vanicat, Pierre Mouriès, Cyrille Jochault, Vincent Bruneau, Tristan Bringuier, Mireille Coilhac)*    
-  
+
+
 :arrow_down: **Téléchargements**  
  
-- Une archive contenant les 45 dossiers (contenant chacun les deux fichiers ```.pdf``` et ```.py```) : [BNS_2024.zip](data2024/BNS_2024.zip){. target="_blank"} (2,9 Mo)
-- Un pdf unique de tous les sujets : [BNS_2024_pdf_unique.pdf](data2024/BNS_2024_pdf_unique.pdf){. target="_blank"} (3,2 Mo) 
-
-
-
-#}
+- Une archive contenant les 48 dossiers (contenant chacun le sujet en ```.pdf``` et le script en ```.py```) : [BNS_2024.zip](data2024/BNS_2024.zip){. target="_blank"} (1,6 Mo)
+- Un pdf unique de tous les sujets : [BNS_2024_pdf_unique.pdf](data2024/BNS_2024_pdf_unique.pdf){. target="_blank"} (2,1 Mo) 
 
 
 
