--- a/docs/T6_6_Epreuve_pratique/BNS_2025.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2025.md
@@ -1,21 +1,18 @@
 # Épreuve Pratique BNS 2025
 
-:warning: 25/03/2025 RETAPAGE en cours :warning: 
 
-{#
-Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **21/03/2024**.    
+Les sujets ci-dessous correspondent à la dernière version officielle, publiée le **25/03/2025**.    
 Pour signaler des erreurs éventuelles : `gilles.lassus@ac-bordeaux.fr`  
 
 
 :arrow_down: **Téléchargements**   
  
-- Une archive contenant les 48 dossiers (contenant chacun le sujet en ```.pdf``` et le script en ```.py```) : [BNS_2024.zip](data2024/BNS_2024.zip){. target="_blank"} (1,6 Mo)
+- Une archive contenant les 48 dossiers (contenant chacun le sujet en ```.pdf``` et le script en ```.py```) : [BNS_2025.zip](data2025/BNS_2025.zip){. target="_blank"} (1,6 Mo)
 
-*(archive mise à jour le 26/05/2024 suite à l'inversion des sujets 45 et 46)*
 
-- Un pdf unique de tous les sujets : [BNS_2024_pdf_unique.pdf](data2024/BNS_2024_pdf_unique.pdf){. target="_blank"} (2,1 Mo) 
+- Un pdf unique de tous les sujets : [BNS_2025_pdf_unique.pdf](data2025/BNS_2025_pdf_unique.pdf){. target="_blank"} (667 Ko) 
 
-#}
+
 
 ## ▶ Sujet 01
 
