--- a/docs/T6_6_Epreuve_pratique/BNS_2026.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2026.md
@@ -109,6 +109,105 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     - [donnees.py](data/EP_sujets0_2/donnees.py){. target="_blank"}
     - [donnees_completes.py](data/EP_sujets0_2/donnees_completes.py){. target="_blank"}
 
+    {{
+    correction(True,
+    """
+    ??? success \"Correction **Q1**\" 
+        ```python
+        def salaire_moyen_condition(employes, champ, valeur):
+            '''Renvoie le salaire moyen des employes ayant val comme valeur associée
+            au champ donné en argument.
+            Si le nombre d'employés considéré est nul, cette fonction renvoie None'''
+            s = 0
+            n = 0
+            for employe in employes:
+                if employe[champ] == valeur:
+                    s += employe['salaire']
+                    n += 1
+            if s == 0:
+                return None
+            return s/n
+        ```
+    """
+    )
+    }}
+
+    {{
+    correction(True,
+    """
+    ??? success \"Correction **Q2**\" 
+        ```python
+        def effectif_par_sexe(employes):
+            nf, nh = 0, 0
+            for employe in employes:
+                if employe['sexe'] == 'F':
+                    nf += 1
+                else:
+                    nh += 1
+            return {'F':nf, 'M':nh}
+        ```
+    """
+    )
+    }}
+
+    {{
+    correction(True,
+    """
+    ??? success \"Correction **Q3**\" 
+        - Le calcul de ```moy_f``` va renvoyer une erreur car ```employes``` est mis entre guillements.
+        - De plus, le calcul final est faux puisqu'il fait simplement la différence entre ```moy_h``` et ```moy_f```.
+
+        ```python
+        def calcul_ecart_sexe(employes):
+            '''Renvoie l'écart de salaire en pourcentage pour les femmes 
+            par rapport aux hommes'''
+            if effectif_par_sexe(employes)['F'] == 0 or effectif_par_sexe(employes)['M'] == 0:
+                return None
+            moy_h = salaire_moyen_condition(employes, 'sexe', 'M')
+            moy_f = salaire_moyen_condition(employes, 'sexe', 'F')
+            return (moy_h - moy_f) / moy_h * 100
+
+        def test_calcul_ecart_sexe():
+            assert calcul_ecart_sexe([{'experience': 5, 'etudes': 3, 'sexe': 'F', 'salaire': 2400}]) == None
+            assert calcul_ecart_sexe(donnees.employes) >= 0 and calcul_ecart_sexe(donnees.employes) <= 100
+
+
+        ```
+    """
+    )
+    }}
+
+
+    {{
+    correction(True,
+    """
+    ??? success \"Correction **Q4**\" 
+        ```python
+        >>> salaire_par_proximite(donnees_completes.employes, {'experience': 3, 'etudes': 3, 'sexe': 'F'})
+        2229.6666666666665
+        >>> salaire_par_proximite(donnees_completes.employes, {'experience': 3, 'etudes': 3, 'sexe': 'M'})
+        2406.0
+        ``` 
+        Il y a un problème dans le code dans le calcul de la distance. En effet, si deux personnes sont de sexe différent, leur distance sera augmentée de 4 par rapport à si elles étaient de même sexe. Ceci n'a pas de raison d'être alors qu'on cherche justement à mesurer les écarts selon le sexe.
+
+        Une bonne fonction ```distance```  serait donc :
+        ```python
+        def distance(e1, e2):
+            '''Renvoie la mesure de distance entre deux personnes.'''
+            s = 0
+            s = s + (e1['experience'] - e2['experience'])**2
+            s = s + (e1['etudes'] - e2['etudes'])**2
+            return sqrt(s)
+        ```
+
+        
+
+    """
+    )
+    }}
+
+
+
 !!! example "Sujet 3"
     - [Sujet](data/EP_sujets0_3/EP-BAC-NSI-Sujet3.pdf){. target="_blank"}
     - [rle.py](data/EP_sujets0_3/rle.py){. target="_blank"}
