--- a/docs/T6_6_Epreuve_pratique/BNS_2026.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2026.md
@@ -219,15 +219,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     correction(True,
     """
     ??? success \"Correction **Q1**\" 
-        ```python
-        def est_bissextile(n):
-            if n % 400 == 0:
-                return True
-            elif n % 4 == 0 and n % 100 != 0:
-                return True
-            else:
-                return False
-        ```
+        Si la liste originale est ```[3, 5, 0, 6]```, la liste obtenue par codage RLE est ```[1, 3, 1, 5, 1, 0, 1, 6]```, qui est 2 fois plus longue. Donc non, la liste obtenue par codage RLE n'est pas forcément de longueur inférieure ou égale.  
     """
     )
     }}
@@ -237,16 +229,14 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     """
     ??? success \"Correction **Q2**\" 
         ```python
-        def determiner_phase(n):
-            assert n <= 28 and n >= 1
-            if n <= 5:
-                return 1
-            elif n <= 13:
-                return 2
-            elif n == 14:
-                return 3
-            else:
-                return 4
+        def decodage_rle(liste_rle):
+            '''Renvoie la liste d'octets obtenue à partir de la liste liste_rle obtenue
+            par compression RLE'''
+            lst = []
+            for i in range(0, len(liste_rle), 2):
+                for k in range(liste_rle[i]):
+                    lst.append(liste_rle[i+1])
+            return lst
         ```
     """
     )
@@ -256,25 +246,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     correction(True,
     """
     ??? success \"Correction **Q3**\" 
-        ```python
-        def test_ajouter_jours():
-            assert ajouter_jours((7, 9, 2025), 3) == (10, 9, 2025)
-
-            assert ajouter_jours((29, 8, 2025), 3) == (1, 9, 2025)
-            #pour tester le changement de mois sur un mois à 31 jours
-
-            assert ajouter_jours((29, 9, 2025), 3) == (2, 10, 2025)
-            #pour tester le changement de mois sur un mois à 30 jours
-
-            assert ajouter_jours((31, 12, 2025), 1) == (1, 1, 2026)
-            #pour tester un changement d'année
-
-            assert ajouter_jours((28, 2, 2024), 3) == (2, 3, 2024)
-            #pour tester le changement de mois sur une année bissextile
-
-            assert ajouter_jours((28, 2, 2025), 3) == (3, 3, 2025)
-            #pour tester le changement de mois sur une année non-bissextile
-        ```
+        On constate que, si tout se passe bien pour l'image ```bac_nsi_32.png```, l'image ```bac_nsi_256.png.dec.png``` obtenue après encodage/décodage de l'image ```bac_nsi_256.png``` présente un décalage de l'écriture.
     """
     )
     }}
