--- a/docs/T6_6_Epreuve_pratique/BNS_2026.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2026.md
@@ -258,25 +258,28 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     ??? success \"Correction **Q4**\" 
         L'erreur qui apparait 
         ```python
-         datetime(
-        ValueError: month must be in 1..12
-        ``` 
-        semble nous indiquer que la date n'est pas au bon format.
-        
-        En effet la documentation de ```iCalendar``` nous dit que la date doit être écrite au format ```AAAAMMJJ```.
-
-        Or, la ligne de code
-        ```python
-        date = str(annee)+str(mois) +str(jour)
-        ``` 
-        va produire 202535 pour le 05 mars 2025, au lieu de 20250305.
-
-        Pour résoudre ce problème, il faut remplacer cette ligne par :
-        ```python
-        date = str(annee)+'{:02d}'.format(mois) + '{:02d}'.format(jour)
+        def codage_rle(liste_octets):
+            '''Renvoie une liste d'octets obtenue par compression RLE'''
+            liste_rle = []
+            i = 0
+            while i < len(liste_octets):
+                c = liste_octets[i]
+                k = 1
+                while i+k < len(liste_octets) and liste_octets[i+k] == c:
+                    k += 1
+                q = k // 255
+                r = k % 255
+                for _ in range(q):
+                    liste_rle.append(255)
+                    liste_rle.append(c)
+                if r != 0:
+                    liste_rle.append(r)
+                    liste_rle.append(c)
+                i += k
+            return liste_rle
         ```
 
-        *Remarque : le formatage des chaînes de caractères n'est pas au programme...*
+
 
 
     """
