--- a/docs/T6_6_Epreuve_pratique/BNS_2026.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2026.md
@@ -256,7 +256,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     correction(True,
     """
     ??? success \"Correction **Q4**\" 
-        L'erreur qui apparait 
+        Il faut modiier la fonction ```codage_rle``` pour faire en sorte qu'elle prenne en compte les valeurs dont le nombre dépasse 255. Il suffit de faire plusieurs «paquets» de 255 de cette valeur.
         ```python
         def codage_rle(liste_octets):
             '''Renvoie une liste d'octets obtenue par compression RLE'''
