--- a/docs/T6_6_Epreuve_pratique/BNS_2026.md
+++ b/docs/T6_6_Epreuve_pratique/BNS_2026.md
@@ -7,7 +7,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     - [cycle_menstruel.py](data/EP_sujets0_1/cycle_menstruel.py){. target="_blank"}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q1**\" 
         ```python
@@ -24,7 +24,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q2**\" 
         ```python
@@ -44,7 +44,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q3**\" 
         ```python
@@ -72,7 +72,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
 
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q4**\" 
         L'erreur qui apparait 
@@ -110,7 +110,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     - [donnees_completes.py](data/EP_sujets0_2/donnees_completes.py){. target="_blank"}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q1**\" 
         ```python
@@ -133,7 +133,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q2**\" 
         ```python
@@ -151,7 +151,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q3**\" 
         - Le calcul de ```moy_f``` va renvoyer une erreur car ```employes``` est mis entre guillements.
@@ -179,7 +179,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
 
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q4**\" 
         ```python
@@ -216,7 +216,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q1**\" 
         Si la liste originale est ```[3, 5, 0, 6]```, la liste obtenue par codage RLE est ```[1, 3, 1, 5, 1, 0, 1, 6]```, qui est 2 fois plus longue. Donc non, la liste obtenue par codage RLE n'est pas forcément de longueur inférieure ou égale.  
@@ -225,7 +225,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q2**\" 
         ```python
@@ -243,7 +243,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
     }}
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q3**\" 
         On constate que, si tout se passe bien pour l'image ```bac_nsi_32.png```, l'image ```bac_nsi_256.png.dec.png``` obtenue après encodage/décodage de l'image ```bac_nsi_256.png``` présente un décalage de l'écriture.
@@ -253,7 +253,7 @@ Vous pouvez retrouver ici les 3 sujets 0 publiés le 08/10/2025.
 
 
     {{
-    correction(True,
+    correction(False,
     """
     ??? success \"Correction **Q4**\" 
         Il faut modiier la fonction ```codage_rle``` pour faire en sorte qu'elle prenne en compte les valeurs dont le nombre dépasse 255. Il suffit de faire plusieurs «paquets» de 255 de cette valeur.
